# x-twitter-nfts

./: .dockerignore  .gitignore  .gitmodules  .infisical.json  BOUNDLESS.md  Cargo.toml  README.md  boundless.md  disabled.Cargo.toml  docker-compose.yml  generate_twitter_proof_server.sh  lint-staged.config.js  package.json  pnpm-lock.yaml  start_notary_server.sh  twitter_dm_notarized_session.json
.github/workflows/: rust.yml
.husky/: pre-commit
src/: .indexer.dockerfile
src/aurora-contracts-sdk/: README.md
src/aurora-contracts-sdk/src/aurora-caller/contract/: Cargo.toml  run.sh
src/aurora-contracts-sdk/src/aurora-caller/contract/src/: lib.rs
src/bitte_plugin/: .bitte.dockerfile  .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  plugin.example.env  pnpm-lock.yaml
src/bitte_plugin/scripts/: run.sh
src/bitte_plugin/src/: helper.rs  main.rs
src/bitte_plugin/src/handler/: catcher_handler.rs  mod.rs  open_api_handler.rs  tweet.rs  utils.rs
src/bitte_plugin/src/models/: response.rs
src/bitte_pluglin/: .env.example  Cargo.toml
src/bitte_pluglin/src/: main.rs
src/bitte_pluglin/src/handler/: mod.rs  open_api_handler.rs  tweet.rs
src/bittle_pluglin/: Cargo.toml  README.md
src/bittle_pluglin/scripts/: run.sh
src/bittle_pluglin/src/: main.rs
src/bittle_pluglin/src/handler/: open_api_handler.rs  tweet.rs
src/bittle_pluglin/src/models/: mod.rs  response.rs
src/contract/nft/nft/src/: events.rs
src/contract/verifier/contract/: Cargo.toml
src/contract/verifier/contract/scripts/: login.sh
src/contract/verifier/integration-tests/: Cargo.toml
src/contracts/: README.md
src/contracts/nft/: README.md
src/contracts/nft/nft/: Cargo.toml
src/contracts/nft/nft/src/: events.rs  lib.rs
src/contracts/nft/scripts/: build.sh  deploy.sh  get_user_tokens.sh  mint_request.sh  test.sh  upgrade_contract.sh
src/contracts/verifier/: rust-toolchain.toml
src/contracts/verifier/contract/: Cargo.toml
src/contracts/verifier/contract/scripts/: deploy_contract.sh  get_contract_data.sh  set_nft_account.sh  set_verifier.sh  upgrade_contract.sh  verify.sh
src/contracts/verifier/contract/src/: external.rs  lib.rs
src/contracts/verifier/integration-tests/: Cargo.toml  WARNING.md
src/contracts/verifier/integration-tests/abi/: RiscZeroGroth16Verifier.json  Verifier.json
src/contracts/verifier/integration-tests/src/: contract_utils.rs  near_interface.rs
src/contracts/verifier/integration-tests/wasm/: non_fungible_token.wasm
src/helper/: Cargo.toml  README.md
src/helper/src/: lib.rs
src/near/: README.md
src/near/contract/: Cargo.toml
src/near/contract/scripts/: deploy_contract.sh  getverifier.sh  login.sh  setverifier.sh  upgrade_contract.sh  verify.sh
src/near/contract/src/: lib.rs
src/near/integration-tests/: Cargo.toml
src/near/integration-tests/src/: lib.rs
src/near_indexer/: .env.example  .env.sample  .rustfmt.toml  Cargo.toml  Dockerfile  README.ME  README.md  Readme.md  docker-compose.yml  indexer.dockerfile
src/near_indexer/migration/src/: m20220101_000001_create_table.rs
src/near_indexer/migration/src/entity/: mod.rs  prelude.rs  transaction.rs
src/near_indexer/src/: cktls.rs  helper.rs  lib.rs  main.rs
src/near_indexer/src/entity/: mod.rs  near_transaction.rs  prelude.rs
src/near_indexer/src/fixtures/: identity.pem
src/near_indexer/src/helper/: aurora.rs  cktls.rs  indexer.rs  mod.rs  near.rs  nft.rs  proof.rs  twitter.rs
src/near_nft/: Cargo.toml  makeFile.toml  rust-toolchain.toml
src/near_nft/nft/: Cargo.toml
src/near_nft/nft/src/: events.rs  lib.rs
src/near_nft/scripts/: deploy.sh  deploy_contract.sh  get_user_tokens.sh  set_mint_authority.sh  upgrade_contract.sh
src/near_verifier/contract/: Cargo.toml
src/near_verifier/contract/scripts/: deploy_contract.sh  get_nft_account.sh  get_verifier.sh  set_verifier.sh
src/near_verifier/contract/src/: external.rs  lib.rs
src/near_verifier/integration-tests/src/: lib.rs
src/notary/: Cargo.toml
src/twitter/: .env.example  Cargo.toml  README.md  tweet_notarized_session.json  tweet_proof.json
src/twitter/examples/: verifier.rs
src/twitter/scripts/: generate_and_move_tweet.sh
src/twitter/src/: main.rs
src/verifier/: Cargo.toml
src/verifier/src/: main.rs
src/zkaf/: .env.sample  .env.sh.sample  .gitignore  .gitmodules  Cargo.toml  README.md  deployment-guide.md  rust-toolchain.toml
src/zkaf/apps/: .env.sample  Cargo.toml  build.rs
src/zkaf/apps/inputs/: zk_params.json
src/zkaf/apps/src/: aurora.rs  boundless.rs  lib.rs  near.rs  proof.rs
src/zkaf/contracts/: IVerifier.sol  Verifier.sol
src/zkaf/fixtures/: zk_params.json
src/zkaf/inputs/: zk_params.json
src/zkaf/lib/risc0-ethereum/examples/erc20-counter/: remappings.txt
src/zkaf/methods/: Cargo.toml  build.rs
src/zkaf/methods/fixtures/: zk_params.json
src/zkaf/methods/guest/: Cargo.toml
src/zkaf/methods/src/: lib.rs
src/zkaf/script/: Deploy.s.sol
src/zkaf/tests/: EvenNumber.t.sol  Verifier.t.sol
src/zkaf/tlsn-substrings-verifier/: Cargo.toml
src/zkaf/tlsn-substrings-verifier/src/: lib.rs  nft.rs
src/zkaf/tlsn-substrings-verifier/src/proof/: session.rs  substrings.rs
