[package]
name = "bitte_plugin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
headless_chrome = { version = "1.0.14", features = ["fetch"] }
indexer = { path = "../near_indexer" }
near-client = "0.7.2"
url = "2.5.4"
serde_json="1.0.112"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt"] }
