[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt"] }
futures = "0.3"
headless_chrome = { version = "1.0.14", features = ["fetch"] }
reqwest = { version = "0.12.3", features = ["json"] }
log = "0.4"

[profile.dev]
debug = true
