[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
headless_chrome = { version = "1.0.14", features = ["fetch"] }
reqwest = { version = "0.12.3", features = ["json"] }
tracing = "0.1.40"
log = "0.4"
serde_json = "1.0.128"
serde = { version = "1.0.147", features = ["derive", "std"] }

[profile.dev]
debug = true

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt"] }
