[package]
name = "x-twitter-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }

p256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1.33.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tracing-subscriber = "0.3.17"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.107"
futures = "0.3.28"
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
chrono = "0.4.31"
serde = { version = "1.0.147", features = ["derive"] }
dotenv = "0.15.0"
rustls = { version = "0.21" }
tokio-rustls = { version = "0.24.1" }
tracing = "0.1.40"
rustls-pemfile = { version = "1.0.2" }

async-tls = { version = "0.12", default-features = false, features = [
    "client",
] }
http-body-util = "0.1"
regex = "1.10.3"
base64 = "0.22.0"
reqwest = { version = "0.12.3", features = ["json"] }
