[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.3" }
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.0", features = ["docker"] }
risc0-build-ethereum = { version = "1.1" }
risc0-ethereum-contracts = { version = "1.1" }
risc0-zkvm = { version = "1.1", default-features = false }
risc0-zkp = { version = "0.20.0", default-features = false }
serde = { version = "1.0", features = ["derive", "std"] }
tlsn-substrings-verifier = { path = "./tlsn-substrings-verifier" }
dotenv = "0.15.0"
boundless-market = { path = "./lib/boundless-market" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[profile.release]
debug = 1
lto = true


[net]
git-fetch-with-cli = true
