[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy-primitives = { version = "0.8.15", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.8.15" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
ethers = { version = "2.0.14" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.2.0", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
risc0-zkvm = { version = "1.2.0", default-features = false,features = ["client"] }
risc0-zkp = { version = "1.2.0", default-features = false }
serde = { version = "1.0.215", features = ["derive", "std"] }
dotenv = "0.15.0"
verity-verifier = { git = "https://github.com/usherlabs/verity-dp", rev = "52a04916992a98a89feadbc5f6786be26821c725", version = "0.0.0", default-features = false, features = [
    "no-session",
] }


[profile.release]
debug = 1
lto = true
