[package]
name = "near-x-twitter-nfts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-sdk = { git="https://github.com/aurora-is-near/aurora-contracts-sdk.git", branch = "main"}
serde = { version = "1", features = ["derive"] }
hex = "0.4"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", branch="master" }