[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
serde = "1.0.215"
hex = { workspace = true }
serde_json = "1.0.133"
sha256 = "1.5.0"
near-jsonrpc-client = "0.9.0"
near-crypto = "0.21.1"
near-primitives = "0.21.1"
near-chain-configs = "0.21.1"
near-jsonrpc-primitives = "0.21.1"
indexer = { path = "../../near_indexer" }
dotenv = { workspace = true }
near-contract-standards = "5.5.0"
verity-verify-tls = { workspace = true }