[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
dotenv = { workspace = true }
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }


[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
# indexer = { path = "../../near_indexer" }
risc0-zkvm = { workspace = true, features = ["client"] }
serde = { workspace = true }
hex = { workspace = true }
serde_json = "1.0.107"
verity-verifier = { workspace = true }

[dependencies]
verity-verifier = { git = "https://github.com/usherlabs/verity-dp", rev = "52a04916992a98a89feadbc5f6786be26821c725", version = "0.0.0", default-features = false, features = [
    "no-session",
] }
