[package]
name = "non-fungible-token"
version = "1.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-contract-tools = "0.7.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", default-features = false }

[profile.release]
overflow-checks = true
