[package]
name = "near-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-sdk-integration-tests = { git="https://github.com/aurora-is-near/aurora-contracts-sdk.git", branch = "main" }
hex = "0.4.3"
near-abi-client = "0.1.0"
serde = "1"
near-contract-standards = "4.1.1"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", branch="master" }